--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-prettier": "5.1.3",
+    "html-webpack-plugin": "^5.6.0",
     "prettier": "^3.1.1",
     "ts-loader": "^9.5.1",
     "tsc-watch": "^6.0.4",
